--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,67 @@ html, body {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    background-color: #1B1924;
+}
+
+.container{
+    max-width: 390px;
+    margin: 30px auto;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.endorsements{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+img{
+    width: 90px;
+}
+
+h1, h4{
+    color: white;
+}
+
+h1{
+    font-size: 25px;
+}
+
+h4{
+    font-size: 20px;
+}
+
+textarea{
+    width: 315px;
+    height: 115px;
+    border: none;
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: #444059;
+    margin-bottom: 15px;
+    font-family: "Josefin Sans", sans-serif;
+    color: white;
+    font-size: 15px;
+    padding: 15px;
+    resize: none;
+    overflow: hidden;
+}
+
+button{
+    width: 315px;
+    font-size: 22px;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: bold;
+    background-color: #28A9F1;
+    border: none;
+    border-radius: 8px;
+    padding: 20px;
 }
