--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html, body {
     font-optical-sizing: auto;
     font-style: normal;
     background-color: #1B1924;
+    user-select: none;
 }
 
 .container{
@@ -19,11 +20,16 @@ html, body {
     justify-content: center;
 }
 
-.endorsements{
+.endorsements, .heading{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.heading{
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
 img{
@@ -40,6 +46,7 @@ h1{
 
 h4{
     font-size: 20px;
+    margin: 0;
 }
 
 textarea{
@@ -73,9 +80,13 @@ button{
 p{
     width: 315px;
     box-sizing: border-box;
+    margin: 0;
+    margin-bottom: 15px;
     padding: 15px;
     background-color: white;
     font-size: 12px;
     border-radius: 8px;
-    text-align: center;
+    word-wrap: break-word;
+    overflow: auto;
+    white-space: pre-line;
 }
